# IGVC-Gem-Simulator

./: CMakeLists.txt  README.md
include/: Environment.h  IGVCSimulator.h  StateSpace.h
src/: ActionSpace.h  CAPI.h  Collision.cpp  Collision.h  DistanceSensor.cpp  DistanceSensor.h  DrawableObject.h  EndZone.cpp  EndZone.h  Environment.cpp  Environment.h  Geometry.h  Graphics.cpp  Graphics.h  Scenario.cpp  Scenario.h  ScenarioObject.h  SimulationObject.h  StateSpace.h  Vehicle.cpp  Vehicle.h  main.cpp
swig/: IGVCSimulator.i  IGVCSimulator.py  IGVCSimulator_wrap.cxx  test.py
